--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="sidebar">
             <nav class="navigation">Level</nav>
             <nav class="navigation">Tasks</nav>
-            <nav class="navigation">Profile</nav>
+            <a href="/profile.html" class="links"><nav class="navigation">Profile</nav></a>
         </div>
         <div class="content__main"> 
-            <div class="content__level">
+            <div class="content__level" id="content__level">
                 <p class="content__level_text active__level">1</p>
             </div>
             <div class="user-info" id="userInfo">
@@ -47,6 +47,12 @@
                 <div class="line__xp">100xp</div>
             </div> 
         </div>
+    </div>
+</div>
+
+<div class="popup" id="popup">
+    <div class="popup__container">
+        <button class="closer" id="closer">X</button>
     </div>
 </div>
 
